01-basic-deploy-ns/svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: test  
  labels:
    app: backend
    service: backend
spec:
  ports:
    - name: http
      port: 3000
      targetPort: 3000
  selector:
    app: backend
